# frabbit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  macos-smoke.yml  prepare-release.yml  release.yml
Contents/CSI For Behringer X-Touch Universal/: CSI 7.0.1 - Manual.html  CSI Repository Adresse.txt
Contents/CSI For Behringer X-Touch Universal/CSI/: CSI.ini
Contents/CSI For Behringer X-Touch Universal/CSI/Surfaces/FCB1010/: Surface.txt
Contents/CSI For Behringer X-Touch Universal/CSI/Surfaces/FCB1010/FXZones/: Template.txt
Contents/CSI For Behringer X-Touch Universal/CSI/Surfaces/X_Touch/: Surface.txt
Contents/CSI For Behringer X-Touch Universal/CSI/Surfaces/X_Touch/Zones/: LastTouchedFXParam.zon
Contents/CSI For Behringer X-Touch Universal/Community Zone Files/David Reynolds/Tokyo Dawn Labs/Nova/: Nova1-1.zon  Nova2-1.zon  Nova3-1.zon
Contents/CSI For Behringer X-Touch Universal/Community Zone Files/Keith Rempel/ReaEQ files/: ReaEQ.zon
Contents/CSI For Behringer X-Touch Universal/Community Zone Files/Keith Rempel/ReaEQ files/ReaEQ scripts/: CycleReaEQBand1.lua  CycleReaEQBand2.lua  CycleReaEQBand3.lua  CycleReaEQBand4.lua  SummarizeReaEQBand1.lua  SummarizeReaEQBand2.lua  SummarizeReaEQBand3.lua  SummarizeReaEQBand4.lua  ToggleEnableBand1.lua  ToggleEnableBand2.lua  ToggleEnableBand3.lua  ToggleEnableBand4.lua
Contents/CSI For Behringer X-Touch Universal/Community Zone Files/Paul Warner/: Exponential_PhoenixVerb.zon  FabFilter_ProQ3.zon  ReaEQ.zon  ReaGate.zon  TDR_Kotelnikov.zon  TDR_SlickEQ.zon  UrsaDSP_Boost.zon  VST__ReaComp__Cockos_.zon  Valhalla_SuperMassive.zon  Voxengo_MSED.zon  Voxengo_TubeAmp.zon  Waves_ButchVigVocalsMono.zon  Waves_ButchVigVocalsStereo.zon  Waves_CLA2AMono.zon  Waves_CLA2AStereo.zon  Waves_CLA76Mono.zon  Waves_CLA76Stereo.zon  Waves_ClarityVXMono.zon  Waves_ClarityVXStereo.zon  Waves_LinMBMono.zon  Waves_LinMBStereo.zon  Waves_RBassMono.zon  Waves_RBassStereo.zon  Waves_SSLChanMono.zon  Waves_SSLChanStereo.zon  Waves_SSLCompMono.zon  Waves_SSLCompStereo.zon  Waves_ScheppsOmniMono.zon  Waves_VitaminMono.zon  Waves_VitaminStereo.zon
Contents/CSI For Behringer X-Touch Universal/Community Zone Files/Paul Warner/Baby Audio/BabyComeBack/: BabyComeBack1-1.zon
Contents/CSI For Behringer X-Touch Universal/Community Zone Files/Paul Warner/Sender Spike/: EchoBoxD7.zon
Contents/CSI For Behringer X-Touch Universal/Community Zone Files/ReaperAccessible/SoundToys/: 01-01.zon  01-01Help.zon  zonelog.txt
Contents/KeyMaps/: KeyMap ReaperAccessible - Win - USA.ReaperKeyMap
KeyMaps/: KeyMap ReaperAccessible - Win - FRC.ReaperKeyMap  KeyMap ReaperAccessible - Win - FRF.ReaperKeyMap
crates/frabbit/: Cargo.toml  build.rs
crates/frabbit-cli/: Cargo.toml
crates/frabbit-cli/src/: lib.rs
crates/frabbit-core/: Cargo.toml
crates/frabbit-core/src/: arch_probe.rs  archive.rs  artifact.rs  configuration.rs  csi.rs  date_version.rs  detection.rs  detection.rs.tmp.24852.141b7d236c22  disk_image.rs  error.rs  generic_post_install.rs  hash.rs  hfs.rs  http.rs  install.rs  latest.rs  lib.rs  localization.rs  lock.rs  metadata.rs  model.rs  package.rs  plan.rs  portable.rs  preflight.rs  progress.rs  reapack.rs  receipt.rs  report.rs  resource.rs  rollback.rs  self_update.rs  setup.rs  signature.rs  upstream.rs  version.rs
crates/frabbit-core/src/operation/: jaws_scripts.rs  mod.rs  osara.rs  reaper.rs  surge_xt.rs  sws.rs
crates/frabbit-core/tests/: macos_upstream_smoke.rs
crates/frabbit-platform/: Cargo.toml
crates/frabbit-platform/src/: arch.rs  disk_image.rs  elevation.rs  file_version.rs  jaws.rs  komplete_kontrol.rs  lib.rs  locale.rs  paths.rs  registry.rs  signature.rs
crates/frabbit-ui-wxdragon/: Cargo.toml
crates/frabbit-ui-wxdragon/src/: lib.rs  wx_app.rs
crates/frabbit-ui-wxdragon/src/wx_app/: native_tree_checkboxes.rs
crates/frabbit/src/: main.rs
crates/frabbit/windows/: frabbit.exe.manifest
locales/en-US/: frabbit.ftl
locales/fr-FR/: frabbit.ftl
packaging/macos/: Info.plist  build-bundle.sh
scripts/: build-wxdragon-test.ps1  extract-changelog.sh
(+1418 files in other folders)
