[workspace]
members = [
    "crates/frabbit",
    "crates/frabbit-cli",
    "crates/frabbit-core",
    "crates/frabbit-platform",
    "crates/frabbit-ui-wxdragon",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "1.3.0"

[profile.release]
# Optimize the user-facing binary for download size first, runtime second.
# `opt-level = "z"` minimizes code size, fat LTO + a single codegen unit let
# the linker drop unused functions across crate boundaries, `strip = "symbols"`
# removes debug names from the final binary, and `panic = "abort"` skips the
# unwinding tables.
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
fluent-bundle = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.33"
tempfile = "3.10"
thiserror = "1.0"
unic-langid = "0.9"
wxdragon = "=0.9.15"
zip = { version = "2", default-features = false, features = ["deflate"] }
