[package]
name = "frabbit-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[dev-dependencies]
tempfile.workspace = true
