[package]
name = "frabbit"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gui = ["frabbit-ui-wxdragon/gui"]

[dependencies]
frabbit-cli = { path = "../frabbit-cli" }
frabbit-ui-wxdragon = { path = "../frabbit-ui-wxdragon" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
] }
